[package]
name = "gitignore-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.10.4"
serde = { version = "*", features = ["derive"] }
ureq = { version = "*", features = ["json", "charset"] }
